修改購物車 新增結帳頁面

--- a/public/index.html
+++ b/public/index.html
@@ -17,4 +17,5 @@
     <div id="app"></div>
     <!-- built files will be auto injected -->
   </body>
+  <script src="https://kit.fontawesome.com/226cea2938.js" crossorigin="anonymous"></script>
 </html>
